# agent-gateway

./: .env.sample  agent.ipynb  pyproject.toml  readme.md  test.ipynb
agent-gateway/: app.py
src/: main.py
src/agent/: agent.py  response.py  tools.py
src/analyst/: preprocess.py
src/analyst/semantic_model/: cortex_analyst_demo.yaml  work_record.yaml  work_record.yml
src/analyst/semantic_model/data/: products.csv  sales_summary_april.csv  sales_transactions_april.csv
src/notebook/: 0522.ipynb
src/search/: preprocess.py  request.py  response.py
