[tool.poetry]
name = "agent-gateway"
version = "0.1.0"
description = ""
authors = ["naofumi1014-ds <osawa.naofumi@dentsusoken.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
orchestration-framework = "^1.0.3"
load-dotenv = "^0.1.0"
langchain = "^0.3.24"
pypdf = "^5.4.0"
langchain-openai = "^0.3.14"
langchain-community = "^0.3.23"
snowflake = "^1.4.0"
reportlab = "^4.4.1"
pandas = "^2.2.3"
streamlit = "^1.45.1"
streamlit-navigation-bar = "^3.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
